--- a/asd.tex
+++ b/asd.tex
@@ -1,11 +1,24 @@
-\documentclass{article}
+\documentclass[twocolumn]{article}
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{amssymb}
-\usepackage{tikz}
-\usepackage[a4paper,margin=0.4\textwidth]{geometry}
 \usepackage{array}
+\usepackage{tikz}
+
+\title{Test Document}
+\article{John Doe}
+\date{\today}
+
 \begin{document}
-docclass article
-import { amsmath tikz }
+This is a plain \LaTeX\ document.
+\begin{center}
+    \begin{minipage}{0.4\textwidth}
+        This is a plain \LaTeX\ document.
+    \end{minipage}
+    \hspace{1pc}
+    \begin{minipage}{0.4\textwidth}
+        This is a plain \LaTeX\ document.
+    \end{minipage}
+\end{center}
+
 \end{document}
